--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ retrofit = "2.9.0"
 okhttp = "4.10.0"
 adapterDelegates = "4.3.2"
 picasso = "2.8"
+lifecycle = "2.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,6 +34,7 @@ okhttp = { group = "com.squareup.okhttp3", name = "okhttp-bom", version.ref = "o
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor" }
 adapter-delegates = { group = "com.hannesdorfmann", name = "adapterdelegates4-kotlin-dsl-viewbinding", version.ref = "adapterDelegates"}
 picasso = { group = "com.squareup.picasso", name = "picasso", version.ref = "picasso" }
+lifecycle = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
